# proma

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/: FUNDING.yml
config/: celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
proma/: enums.py  views.py
proma/clients/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
proma/clients/migrations/: 0001_initial.py  0002_auto_20180322_1807.py
proma/clients/tests/: test_models.py  test_views.py
proma/common/: apps.py  forms.py  helpers.py  utils.py
proma/common/templatetags/: form_tags.py  pagination_tags.py
proma/config/: apps.py  forms.py  models.py  urls.py  views.py
proma/config/migrations/: 0001_initial.py  0002_configuration_payment_method_info.py
proma/config/tests/: test_views.py
proma/invoices/: admin.py  apps.py  exceptions.py  filters.py  forms.py  models.py  querysets.py  reports.py  tasks.py  urls.py  views.py
proma/invoices/migrations/: 0001_initial.py  0002_invoice_token.py  0003_populate_invoice_hash.py  0004_auto_20180308_0918.py  0005_invoice_payment_notes.py  0006_invoice_currency.py
proma/invoices/tests/: test_forms.py  test_models.py  test_views.py
proma/payments/: #models.py#
proma/projects/: admin.py  apps.py  context_processors.py  exceptions.py  filters.py  forms.py  models.py  urls.py  views.py
proma/projects/migrations/: 0001_initial.py  0002_expense.py  0003_auto_20180122_0606.py  0004_auto_20180126_1753.py  0005_expense_is_billable.py  0006_timesheet.py
proma/projects/tests/: test_forms.py  test_models.py  test_views.py
proma/static/css/: dashboard.css
proma/static/js/: forms.js  timesheet-list.js
proma/templates/: _filter.html  _pagination.html  base.html  home.html  login.html
proma/templates/clients/: _client_form.html  client_create.html  client_detail.html  client_list.html  client_update.html
proma/templates/config/: configuration_update.html
proma/templates/email/: invoice_opened.html
proma/templates/invoices/: _invoice-table.html  _invoice_form.html  invoice_create.html  invoice_delete.html  invoice_detail.html  invoice_list.html  invoice_public_detail.html  invoice_update.html  pay.html
proma/templates/pdf/: invoice.html
proma/templates/projects/: _timesheet_form.html  expense_create.html  expense_detail.html  expense_list.html  expense_update.html  project_create.html  project_create_invoice.html  project_detail.html  project_list.html  project_update.html  (+4 more)
proma/users/: admin.py  apps.py  models.py  urls.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
(+2 files in other folders)
