[tool.poetry]
name = "proma"
version = "0.1.0"
description = "A simple tool to manage freelance projects"
authors = ["Erick Navarro <erick@navarro.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.7"
django-crispy-forms = "^1.7"
django-model-utils = "^4.3.1"
python-dateutil = "^2.7"
celery = "^5.2.7"
redis = "=4.4.4"
pillow = "^9.5.0"
pdfkit = "^0.6.1"
gunicorn = "^19.9"
raven = "^6.10"
django-filter = "^23.1"
django = "3.2.19"
dj-database-url = "^0.5.0"
babel = "^2.6"
django-celery-results = "2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
pep8-naming = "^0.7.0"
mixer = "^6.1"
pytest-coverage = "^0.0.0"
pytest-django = "^3.4"
black = "^18.3-alpha.4"

[tool.black]
py36 = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
